@@ -123,3 +123,4 @@ icons.py
 test.html
 iso-639-3.*
 build-dir/
+benchmarking/
